<resources>
    <string name="app_name">Ferreteria</string>
    <string name="hint_name">Product</string>
    <string name="hint_stock">Stock</string>
    <string name="hint_price">Price</string>
    <string name="btnSave">Save</string>
    <string name="menu_new">Products</string>
    <string name="menu_logout">Log out</string>
    <!--User-->
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
</resources>
