<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".New">

    <TextView
        android:id="@+id/viewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_name" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/viewName"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_stock" />
    <EditText
        android:id="@+id/txtStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/viewStock"
        android:ellipsize="end"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_price" />
    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/viewPrice"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/btnSave" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_baseline_delete_24" />
</LinearLayout >