<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    cardCornerRadius="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:fillViewport="true"
    android:background="#fff"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.widget.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/hint_name"
                android:textColor="#000"
                android:textStyle="bold"/>

            <android.widget.TextView
                android:id="@+id/viewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_name"
                android:textColor="#000" />
        </LinearLayout>
        <!--        <TextView-->
        <!--            android:id="@+id/viewName"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="TextView"-->
        <!--            android:textColor="#181818"-->
        <!--            android:textSize="24sp" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <android.widget.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/hint_price"
                android:textColor="#000"
                android:textStyle="bold"
                />

            <android.widget.TextView
                android:id="@+id/viewPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_price"
                android:textColor="#000" />
        </LinearLayout>
        <!--        <TextView-->
        <!--            android:id="@+id/viewPrice"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="TextView"-->
        <!--            android:textSize="18sp" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <android.widget.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/hint_stock"
                android:textColor="#000"
                android:textStyle="bold"
                />

            <android.widget.TextView
                android:id="@+id/viewStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_stock"/>
        </LinearLayout>

        <!--        <TextView-->
        <!--            android:id="@+id/viewStock"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="TextView"-->
        <!--            android:textSize="18sp" />-->
    </LinearLayout>
</androidx.cardview.widget.CardView>