<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:background="@color/loginBkColor"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:layout_marginRight="5dp"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/loginViewsMargin"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginRight="@dimen/loginViewsMargin"
        android:layout_marginBottom="@dimen/loginViewsMargin"
        >
        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Sign Up"
            android:layout_marginBottom="@dimen/loginViewsMargin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_email" />
        <EditText
            android:id="@+id/signupemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_username" />
        <EditText
            android:id="@+id/signupusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_password" />
        <EditText
            android:id="@+id/siguppassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        <Button android:id="@+id/signupbutton"
            style="@style/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"/>
        <TextView android:id="@+id/backlogin"
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="Go Back"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:gravity="center_horizontal" />
    </LinearLayout>


<!--    <EditText-->
<!--        android:id="@+id/signupemail"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginTop="164dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/hint_email"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.495"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/signupbutton"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="55dp"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:text="Sign Up"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="#181818"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.495"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/siguppassword" />-->

<!--    <EditText-->
<!--        android:id="@+id/signupusername"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/hint_username"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.495"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/signupemail" />-->

<!--    <Button-->
<!--        android:id="@+id/backlogin"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="55dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:text="Back"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="#181818"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.495"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/signupbutton"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

<!--    <EditText-->
<!--        android:id="@+id/siguppassword"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/hint_password"-->
<!--        android:inputType="textPassword"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.495"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/signupusername" />-->

</androidx.cardview.widget.CardView>